syntax = "proto3";

package greet;

option java_package = "id.proto.greet";
option java_multiple_files  = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetEveryoneRequest {
  Greeting greeting  =1;
}

message GreetEveryoneResponse {
  string result  =1;
}

service GreetService {
  // client Stream
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}